overflow x direction  tried to fix still it's pending.

--- a/src/App.css
+++ b/src/App.css
@@ -28,9 +28,6 @@
   color: #61dafb;
 }
 
-* {
-  overflow-x: hidden;
-}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
